[package]
name = "socket-network-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
tungstenite = "0.21"
tokio-stream = "0.1"
base64 = "0.22"
rsa = "0.9"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
